ru locale extended

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -22,6 +22,7 @@
   "featured story": "связанная история",
   "Get Started": "Начать",
   "Get the best viral stories straight into your inbox!": "Получайте лучшие статьи прямо на почту!",
+  "Getting Started": "Посты по тегу",
   "Go to article": "Перейти к статье",
   "Go to the profile of": "Перейти в профиль",
   "Go to": "Перейти",
