--- a/locales/ko.json
+++ b/locales/ko.json
@@ -1,18 +1,18 @@
 {
   "Back": "뒤로 가기",
-  "Newer Posts": "최신 게시글",
+  "Newer Posts": "최신 게시물",
   "of": "중",
-  "Older Posts": "Older Posts",
-  "Page": "Page",
-  "Home": "Home",
-  "More": "More",
-  "By": "By",
-  "Updated": "Updated",
-  "Posts Tagged": "Posts Tagged",
+  "Older Posts": "이전 게시물",
+  "Page": "페이지",
+  "Home": "홈",
+  "More": "더 보기",
+  "By": "로부터",
+  "Updated": "업데이트됨",
+  "Posts Tagged": "다음 태그가 된 게시물들",
   "There are {total} posts in total": "There are {total} posts in total",
   "The full archive": "The full archive",
-  "Get Started": "Get Started",
-  "Subscribe": "Subscribe",
+  "Get Started": "시작하기",
+  "Subscribe": "구독",
   "Log in": "Log in",
   "Upgrade": "Upgrade",
   "Account": "Account",
