--- a/locales/ko.json
+++ b/locales/ko.json
@@ -10,18 +10,17 @@
   "Updated": "업데이트됨",
   "Posts Tagged": "다음 태그가 된 게시물들",
   "There are {total} posts in total": "There are {total} posts in total",
-  "The full archive": "The full archive",
   "Get Started": "시작하기",
   "Subscribe": "구독",
   "Log in": "Log in",
   "Upgrade": "Upgrade",
   "Account": "Account",
   "Log out": "Log out",
-  "Sign in": "Sign in",
-  "Sign up": "Sign up",
-  "Subscribe now": "Subscribe now",
+  "Sign in": "로그인",
+  "Sign up": "가입",
+  "Subscribe now": "지금 구독",
   "Signed in as": "Signed in as",
-  "Upgrade your account": "Upgrade your account",
+  "Upgrade your account": "계정을 업그레이드하세요.",
   "This post is for subscribers on the {specificTiers} only": "This post is for subscribers on the {specificTiers} only",
   "This post is for paying subscribers only": "This post is for paying subscribers only",
   "This post is for subscribers only": "This post is for subscribers only",
@@ -40,29 +39,29 @@
   "A collection of 1 post": "A collection of 1 post",
   "A collection of % posts": "A collection of % posts",
   "Get the best viral stories straight into your inbox!": "Get the best viral stories straight into your inbox!",
-  "Latest Posts": "Latest Posts",
-  "No posts": "No posts",
-  "Read more": "Read more",
+  "Latest Posts": "최근 게시물",
+  "No posts": "게시물 없음",
+  "Read more": "더 보기",
   "See all % posts": "See all % posts",
   "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox",
   "youremail@example.com": "youremail@example.com",
-  "Enter your email": "Enter your email",
+  "Enter your email": "이메일 주소를 입력하세요.",
   "No spam. No jibber jabber. Unsubscribe any time.": "No spam. No jibber jabber. Unsubscribe any time.",
-  "1 post": "1 post",
-  "% posts": "% posts",
-  "Load More": "Load More",
-  "Search": "Search",
-  "< 1 min read": "&lt; 1 min read",
-  "1 min read": "1 min read",
-  "% min read": "% min read",
-  "Comments": "Comments",
-  "Next article": "Next article",
-  "Previous article": "Previous article",
+  "1 post": "1 게시물",
+  "% posts": "% 게시물들",
+  "Load More": "더 불러오기",
+  "Search": "검색",
+  "< 1 min read": "&lt; 1 분 길이",
+  "1 min read": "1 분 길이",
+  "% min read": "% 분 길이",
+  "Comments": "코멘트",
+  "Next article": "다음 게시물",
+  "Previous article": "이전 게시물",
   "in": "in",
-  "Featured Articles": "Featured Articles",
+  "Featured Articles": "주목할 만한 게시물",
   "Sign up for my newsletter!": "Sign up for my newsletter!",
-  "Related Articles": "Related Articles",
-  "Unfortunately, this page doesn't exist": "Unfortunately, this page doesn't exist",
+  "Related Articles": "최근 게시물",
+  "Unfortunately, this page doesn't exist": "아쉽지만, 이 페이지는 존재하지 않습니다.",
   "Go to the profile of": "Go to the profile of",
   "Hi I'm": "Hi I'm",
   "Go to": "Go to",
@@ -70,17 +69,17 @@
   "Navigate up/down": "Navigate up/down",
   "Go to article": "Go to article",
   "Search new term": "Search new term",
-  "Close search": "Close search",
+  "Close search": "검색 창 닫기",
   "No results found": "No results found",
   "featured story": "featured story",
   "Read post": "Read post",
   "About Us": "About Us",
-  "Share": "Share",
+  "Share": "공유하기",
   "Share on": "Share on",
-  "Send": "Send",
+  "Send": "보내기",
   "Listen": "Listen",
   "Related <span class='text-primary'>Articles</span>": "Related <span class='text-primary'>Articles</span>",
   "Please enter a valid email address!": "Please enter a valid email address!",
   "<strong>Great!</strong> Check your inbox and click the link to confirm your subscription": "<strong>Great!</strong> Check your inbox and click the link to confirm your subscription",
-  "Discussion": "Discussion"
+  "Discussion": "댓글"
 }
