--- a/locales/ko.json
+++ b/locales/ko.json
@@ -12,10 +12,10 @@
   "There are {total} posts in total": "There are {total} posts in total",
   "Get Started": "시작하기",
   "Subscribe": "구독",
-  "Log in": "Log in",
-  "Upgrade": "Upgrade",
-  "Account": "Account",
-  "Log out": "Log out",
+  "Log in": "로그인",
+  "Upgrade": "업그레이드",
+  "Account": "계정",
+  "Log out": "로그아웃",
   "Sign in": "로그인",
   "Sign up": "가입",
   "Subscribe now": "지금 구독",
