--- a/locales/ko.json
+++ b/locales/ko.json
@@ -58,9 +58,9 @@
   "Next article": "다음 게시물",
   "Previous article": "이전 게시물",
   "in": "in",
-  "Featured Articles": "주목할 만한 게시물",
+  "Featured Articles": "주목할 만한 게시물들",
   "Sign up for my newsletter!": "Sign up for my newsletter!",
-  "Related Articles": "최근 게시물",
+  "Related Articles": "최근 게시물들",
   "Unfortunately, this page doesn't exist": "아쉽지만, 이 페이지는 존재하지 않습니다.",
   "Go to the profile of": "Go to the profile of",
   "Hi I'm": "Hi I'm",
