--- a/locales/ko.json
+++ b/locales/ko.json
@@ -9,7 +9,6 @@
   "By": "로부터",
   "Updated": "업데이트됨",
   "Posts Tagged": "다음 태그가 된 게시물들",
-  "There are {total} posts in total": "There are {total} posts in total",
   "Get Started": "시작하기",
   "Subscribe": "구독",
   "Log in": "로그인",
@@ -19,34 +18,26 @@
   "Sign in": "로그인",
   "Sign up": "가입",
   "Subscribe now": "지금 구독",
-  "Signed in as": "Signed in as",
   "Upgrade your account": "계정을 업그레이드하세요.",
-  "This post is for subscribers on the {specificTiers} only": "This post is for subscribers on the {specificTiers} only",
-  "This post is for paying subscribers only": "This post is for paying subscribers only",
-  "This post is for subscribers only": "This post is for subscribers only",
-  "Read the rest of this story with a free account.": "Read the rest of this story with a free account.",
-  "Hey there!": "Hey there!",
+  "This post is for subscribers on the {specificTiers} only": "해당 게시물은 {specificTiers} 등급 구독자들만 열람 가능합니다.",
+  "This post is for paying subscribers only": "해당 게시물은 유료 구독자들만 열람 가능합니다.",
+  "This post is for subscribers only": "해당 게시물은 구독자들만 열람 가능합니다.",
+  "Hey there!": "이봐요!",
   "You don't have access to this post on <strong>{siteTitle}</strong> at the moment, but if you upgrade your account you'll be able to see the whole thing, as well as all the other posts in the archive! Subscribing only takes a few seconds and will give you immediate access.": "You don't have access to this post on <strong>{siteTitle}</strong> at the moment, but if you upgrade your account you'll be able to see the whole thing, as well as all the other posts in the archive! Subscribing only takes a few seconds and will give you immediate access.",
-  "Already have an account?": "Already have an account?",
-  "You've successfully subscribed to": "You've successfully subscribed to",
-  "Great! Next, complete checkout for full access to": "Great! Next, complete checkout for full access to",
-  "Welcome back! You've successfully signed in.": "Welcome back! You've successfully signed in.",
-  "Unable to sign you in. Please try again.": "Unable to sign you in. Please try again.",
-  "Success! Your account is fully activated, you now have access to all content.": "Success! Your account is fully activated, you now have access to all content.",
-  "Success! Your billing info is updated.": "Success! Your billing info is updated.",
-  "Billing info update failed.": "Billing info update failed.",
-  "A collection of posts": "A collection of posts",
-  "A collection of 1 post": "A collection of 1 post",
-  "A collection of % posts": "A collection of % posts",
-  "Get the best viral stories straight into your inbox!": "Get the best viral stories straight into your inbox!",
+  "Already have an account?": "계정이 이미 있으신가요?",
+  "You've successfully subscribed to": "성공적으로 구독되었습니다.",
+  "Great! Next, complete checkout for full access to": "좋아요! 다음으로, 컨텐츠 접근을 위해 확인해주세요.",
+  "Welcome back! You've successfully signed in.": "돌아온 것을 환영합니다! 로그인되었습니다.",
+  "Unable to sign you in. Please try again.": "로그인에 실패했습니다. 다시 시도해 주세요.",
+  "Success! Your account is fully activated, you now have access to all content.": "계정이 활성화되었습니다! 모든 컨텐츠에 접근 가능합니다.",
+  "Success! Your billing info is updated.": "결제 정보가 갱신되었습니다!",
+  "Billing info update failed.": "결제 정보 갱신 실패",
   "Latest Posts": "최근 게시물",
   "No posts": "게시물 없음",
   "Read more": "더 보기",
-  "See all % posts": "See all % posts",
-  "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox": "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox",
+  "See all % posts": "% 게시물들 모두 보기",
   "youremail@example.com": "youremail@example.com",
   "Enter your email": "이메일 주소를 입력하세요.",
-  "No spam. No jibber jabber. Unsubscribe any time.": "No spam. No jibber jabber. Unsubscribe any time.",
   "1 post": "1 게시물",
   "% posts": "% 게시물들",
   "Load More": "더 불러오기",
@@ -57,15 +48,9 @@
   "Comments": "코멘트",
   "Next article": "다음 게시물",
   "Previous article": "이전 게시물",
-  "in": "in",
   "Featured Articles": "주목할 만한 게시물들",
-  "Sign up for my newsletter!": "Sign up for my newsletter!",
   "Related Articles": "최근 게시물들",
   "Unfortunately, this page doesn't exist": "아쉽지만, 이 페이지는 존재하지 않습니다.",
-  "Go to the profile of": "Go to the profile of",
-  "Hi I'm": "Hi I'm",
-  "Go to": "Go to",
-  "Stories": "Stories",
   "Navigate up/down": "Navigate up/down",
   "Go to article": "Go to article",
   "Search new term": "Search new term",
