partial korean translate

--- a/locales/ko.json
+++ b/locales/ko.json
@@ -8,7 +8,7 @@
   "More": "더 보기",
   "By": "로부터",
   "Updated": "업데이트됨",
-  "Posts Tagged": "다음 태그가 된 게시물들",
+  "Posts Tagged": "다음 태그가 된 게시물들을 찾았습니다.",
   "Get Started": "시작하기",
   "Subscribe": "구독",
   "Log in": "로그인",
@@ -23,13 +23,12 @@
   "This post is for paying subscribers only": "해당 게시물은 유료 구독자들만 열람 가능합니다.",
   "This post is for subscribers only": "해당 게시물은 구독자들만 열람 가능합니다.",
   "Hey there!": "이봐요!",
-  "You don't have access to this post on <strong>{siteTitle}</strong> at the moment, but if you upgrade your account you'll be able to see the whole thing, as well as all the other posts in the archive! Subscribing only takes a few seconds and will give you immediate access.": "You don't have access to this post on <strong>{siteTitle}</strong> at the moment, but if you upgrade your account you'll be able to see the whole thing, as well as all the other posts in the archive! Subscribing only takes a few seconds and will give you immediate access.",
   "Already have an account?": "계정이 이미 있으신가요?",
   "You've successfully subscribed to": "성공적으로 구독되었습니다.",
   "Great! Next, complete checkout for full access to": "좋아요! 다음으로, 컨텐츠 접근을 위해 확인해주세요.",
-  "Welcome back! You've successfully signed in.": "돌아온 것을 환영합니다! 로그인되었습니다.",
+  "Welcome back! You've successfully signed in.": "돌아 온 것을 환영합니다! 로그인되었습니다.",
   "Unable to sign you in. Please try again.": "로그인에 실패했습니다. 다시 시도해 주세요.",
-  "Success! Your account is fully activated, you now have access to all content.": "계정이 활성화되었습니다! 모든 컨텐츠에 접근 가능합니다.",
+  "Success! Your account is fully activated, you now have access to all content.": "계정이 완전히 활성화되었습니다! 모든 컨텐츠에 접근 가능합니다.",
   "Success! Your billing info is updated.": "결제 정보가 갱신되었습니다!",
   "Billing info update failed.": "결제 정보 갱신 실패",
   "Latest Posts": "최근 게시물",
@@ -51,20 +50,17 @@
   "Featured Articles": "주목할 만한 게시물들",
   "Related Articles": "최근 게시물들",
   "Unfortunately, this page doesn't exist": "아쉽지만, 이 페이지는 존재하지 않습니다.",
-  "Navigate up/down": "Navigate up/down",
-  "Go to article": "Go to article",
-  "Search new term": "Search new term",
+  "Go to article": "게시물로 가기",
+  "Search new term": "새 용어 검색",
   "Close search": "검색 창 닫기",
-  "No results found": "No results found",
-  "featured story": "featured story",
-  "Read post": "Read post",
-  "About Us": "About Us",
+  "No results found": "검색 결과 없음",
+  "featured story": "주목할 만한 이야기",
+  "Read post": "게시물 일기",
   "Share": "공유하기",
-  "Share on": "Share on",
+  "Share on": "에 공유하기",
   "Send": "보내기",
-  "Listen": "Listen",
-  "Related <span class='text-primary'>Articles</span>": "Related <span class='text-primary'>Articles</span>",
-  "Please enter a valid email address!": "Please enter a valid email address!",
-  "<strong>Great!</strong> Check your inbox and click the link to confirm your subscription": "<strong>Great!</strong> Check your inbox and click the link to confirm your subscription",
+  "Related <span class='text-primary'>Articles</span>": "최근 <span class='text-primary'>게시물들</span>",
+  "Please enter a valid email address!": "인증된 이메일 주소를 입력해 주세요.",
+  "<strong>Great!</strong> Check your inbox and click the link to confirm your subscription": "<strong>좋아요!</strong> 링크를 클릭해 구독을 완료하세요!",
   "Discussion": "댓글"
 }
